<resources>
    <string name="app_name">Privacy Manager</string>
    <string name="edit_rule">Edit rule</string>
    <string name="delete_rule">Delete rule</string>
    <string name="test_rule">Test rule</string>
    <string name="rules_title">Le tue regole</string>
    <string name="new_rule">New rule</string>
    <string name="create_new_rule">Crea una nuova regola</string>
    <string name="create_button">Crea</string>
    <string name="cancel_button">Annulla</string>
    <string name="delete_rule_text">Desideri cancellare \"Test rule\"?</string>
    <string name="confirm_button">Conferma</string>
    <string name="test_saved_rule">Test rule</string>
    <string name="saved_rule_app">Le app</string>
    <string name="test_rule_title">Test rule</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel facilisis sapien, at scelerisque justo. Ut cursus pretium sollicitudin. Vestibulum dapibus tincidunt fringilla. Vestibulum non purus quis lacus accumsan finibus posuere sit amet eros.</string>
    <string name="start_rule">Attivare la regola?</string>
    <string name="start_rule_button">Attiva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forward_button">Avanti</string>
    <string name="back_button">Indietro</string>
    <string name="permissions_text">Autorizzazioni</string>
    <string name="info_permissions_selection">Clicca sulle autorizzazioni per selezionare quelle che vuoi siano monitorate</string>
    <string name="notifications_text">Notifiche</string>
    <string name="info_notification">Edit notification</string>
    <string name="location_text">Localizzazione</string>
    <string name="info_location">Edit location</string>
    <string name="info_calendar">Edit calendar</string>
    <string name="calendar_text">Calendario</string>
    <string name="info_camera">Edit camera</string>
    <string name="camera_text">Fotocamera</string>
    <string name="info_sms">Edit SMS</string>
    <string name="sms_text">SMS</string>
    <string name="apps_text">Applicazioni</string>
    <string name="info_apps_selection">Scegli le app da monitorare</string>
    <string name="app_icon_info">App icon</string>
    <string name="test_app_text">Test app</string>
    <string name="time_slot_text">Giorno e ora</string>
    <string name="info_time_slot_selection">Inserisci uno slot di giorni/ora in cui attivare il monitoraggio</string>
    <string name="time_slot_text_button">Nuovo slot</string>
    <string name="info_time_slot_button">Edit time slot</string>
    <string name="from_time_text">Dalle:</string>
    <string name="from_time_info">From time</string>
    <string name="to_time_text">Alle:</string>
    <string name="to_time_info">To time</string>
    <string name="monday_info">Monday</string>
    <string name="monday_text">L</string>
    <string name="days_text">I giorni:</string>
    <string name="tuesday_info">Tuesday</string>
    <string name="tuesday_text">M</string>
    <string name="wednesday_info">Wednesday</string>
    <string name="wednesday_text">M</string>
    <string name="thursday_info">Thursday</string>
    <string name="thursday_text">G</string>
    <string name="friday_info">Friday</string>
    <string name="friday_text">V</string>
    <string name="saturday_info">Saturday</string>
    <string name="saturday_text">S</string>
    <string name="delete_time_slot_info">Delete time slot</string>
    <string name="delete_time_slot">Elimina</string>
    <string name="sunday_info">Sunday</string>
    <string name="sunday_text">D</string>
    <string name="confirm_time_slot_info">Confirm time slot</string>
    <string name="confirm_time_slot">Conferma</string>
    <string name="positions_text">Posizioni</string>
    <string name="info_position_selection">Inserisci una o più posizioni in cui attivare il monitoraggio</string>
    <string name="position_text_button">Nuova posizione</string>
    <string name="info_position_button">Edit position</string>
    <string name="insert_position_hint">Inserisci un indirizzo</string>
    <string name="delete_position_info">Delete position</string>
    <string name="network_text">Rete</string>
    <string name="info_network_selection">Inserisci una o più reti alla cui connessione attivare il monitoraggio</string>
    <string name="network_text_button">Nuova rete Wi-Fi</string>
    <string name="info_network_button">Edit network</string>
    <string name="mobile_network_text">Connessione dati</string>
    <string name="insert_network_hint">Inserisci una rete Wi-Fi</string>
    <string name="delete_network_info">Delete network</string>
    <string name="bluetooth_text">Bluetooth</string>
    <string name="info_bluetooth_selection">Seleziona uno o più dispositivi salvati al cui collegamento attivare il monitoraggio</string>
    <string name="test_bluetooth_text">Test bluetooth</string>
    <string name="battery_text">Batteria</string>
    <string name="info_battery_selection">Inserisci un livello di batteria al di sotto del quale attivare il monitoraggio</string>
    <string name="battery_level_hint">Inserisci un livello di batteria</string>
    <string name="action_text">Azione</string>
    <string name="info_action_notification_selection">Scegli come reagire quando una delle app selezionate invia una notifica violando la regola creata</string>
    <string name="obscure_notification_text">Segnala app e oscura notifica</string>
    <string name="block_notification_text">Chiudi app e blocca notifica</string>
    <string name="info_action_no_notification_selection">Scegli come reagire quando un\'app viola la regola creata</string>
    <string name="signal_app_text">Segnala applicazione</string>
    <string name="close_app_text">Chiudi applicazione</string>
    <string name="violation_title">Dettagli violazione</string>
    <string name="violation_info">La seguente app ha violato la regola \"Test rule\"</string>
    <string name="revoke_permission_info">Revoke permission</string>
    <string name="revoke_permission_text">Revoca autorizzazione</string>
    <string name="notification_details">Dettagli notifica</string>
    <string name="notification_info">La seguente app definita in \"Test rule\" ha inviato questa notifica</string>
    <string name="notification_content">Notification content</string>
    <string name="insert_name_rule">Inserisci un nome per la regola</string>
    <string name="rule_name_text">Nome della regola</string>
    <string name="save">Salva</string>
    <string name="confirm_network_info">Confirm network</string>
    <string name="confirm_position_info">Confirm position</string>
    <string name="confirm_slot">Conferma slot:</string>
    <string name="error_app">Selezionare almeno un\'app per proseguire</string>
    <string name="error_time">Verificare la correttezza dello slot orario inserito</string>
    <string name="permissions_icon">Permissions icon</string>
    <string name="action_icon">Action icon</string>
    <string name="location_icon">Location icon</string>
    <string name="time_slot_icon">Time slot icon</string>
    <string name="parameters_icon">Parameters icon</string>
    <string name="no_rule_saved">Nessuna regola presente</string>
    <string name="saved_rules">Regole salvate:</string>
    <string name="active_rules">Regole attive:</string>
    <string name="notification_title">Notification title</string>
    <string name="ask_permissions">Per usare l\'applicazione è necessario garantire le seguenti autorizzazioni. Clicca sui bottoni per concederne l\'utilizzo:</string>
    <string name="location_permission">Location permission</string>
    <string name="ask_location">Posizione</string>
    <string name="calendar_permission">Calendar permission</string>
    <string name="ask_calendar">Calendario</string>
    <string name="bluetooth_permission">Bluetooth permission</string>
    <string name="ask_bluetooth">Bluetooth</string>
    <string name="notifications_permission">Notifications permission</string>
    <string name="ask_notifications">Leggi notifiche</string>
    <string name="usage_permission">Usage permission</string>
    <string name="ask_usage">Monitora app</string>
    <string name="confirm_permissions">Confirm permissions</string>
    <string name="no_active_rule">Nessuna regola presente</string>
    <string name="reset_time_slot_info">Reset</string>
    <string name="reset_time_slot">Reset orario</string>
    <string name="filter_app">Cerca applicazione</string>
    <string name="rule_definition">Definizione regola</string>
    <string name="rule_definition_info">Per definire la regola è necessario specificare i seguenti parametri. Clicca sui bottoni corrispondenti per definirli</string>
    <string name="permissions_title">Cosa monitorare?</string>
    <string name="permissions_button">Permissions button</string>
    <string name="permissions">Autorizzazioni</string>
    <string name="apps_title">Utilizzate da chi?</string>
    <string name="apps_button">Apps button</string>
    <string name="apps">App</string>
    <string name="conditions_title">In che condizioni?</string>
    <string name="conditions_button">Conditions button</string>
    <string name="conditions">Condizioni</string>
    <string name="optional">(Opzionale)</string>
    <string name="action_title">Come reagire?</string>
    <string name="action_button">Action button</string>
    <string name="action">Azione</string>
    <string name="arrow">Arrow</string>
    <string name="current_position_info">Salvare la posizione corrente?</string>
    <string name="current_position_name">Inserire un nome per la posizione</string>
    <string name="sign_in_text">Accedi con il tuo account Google</string>
    <string name="app_logo">App logo</string>
    <string name="receive_notifications">Ricevi notifiche</string>
</resources>